# aidoku-sources

./: .gitignore  README.md  index.json  index.min.json
sources/: zh.bilicomic-v2.aix  zh.nnhanman-v1.aix
src/rust/zh.bilicomic/: Cargo.toml
src/rust/zh.bilicomic/res/: filters.json  source.json
src/rust/zh.bilicomic/src/: lib.rs  parser.rs  url.rs
src/rust/zh.nnhanman/: Cargo.toml
src/rust/zh.nnhanman/res/: filters.json  source.json
src/rust/zh.nnhanman/src/: lib.rs  parser.rs  url.rs
